<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MyCalendar!</string>
    <string name="app_name">MyCalendar2</string>
    <string name="sunday">日</string>
    <string name="monday">月</string>
    <string name="tuesday">火</string>
    <string name="wednesday">水</string>
    <string name="thursday">木</string>
    <string name="friday">金</string>
    <string name="saturday">土</string>
    <string name="now_proc">実行中</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
</resources>
